--- a/QBF/.classpath
+++ b/QBF/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="E:/Taste-of-research-2020/sat4j-1.7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
